@@ -17,5 +17,3 @@ Fix the DNW/DPW stuff
 - Konsole bug
 
 - Sul mac, F1 lascia giù il primo menu
-
-- SAVE_A non dovrebbe impostare la sintassi!
